<resources>
    <string name="app_name">Cevichería Alexander</string>
    <string name="label_usuario">Correo Electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_start_session">Iniciar Sesión</string>
    <string name="label_nuevoUser"><u>Nuevo Usuario ? Registrarme Ahora</u></string>
    <string name="label_olvide_password">Olvide mi contraseña ?</string>
    <string name="label_bienvenida">Hola ! - Identifíquese para iniciar sesión</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Alexander Fuentes Medina</string>
    <string name="nav_header_subtitle">afuentes@live.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_configuracion">Configuración</string>
    <string name="menu_compras">Mis Compras</string>
    <string name="menu_home">Inicio</string>
    <string name="nav_administracion">Administración</string>
    <string name="nav_producto">Productos</string>
    <string name="nav_categoria">Categorías</string>
    <string name="titulo_men">En el menú de hoy</string>
    <string name="descripcion_platillo">Esta rica ensalada norteña viene acompañada con su rica
        lechuga, tomates, cebollas, choclos fresca, además incluye su buen refrescos para acompañar este exquisito
        platillo preparado por nuestros grandes chef norteños del Perú.</string>
    <string name="add_cart">Añadir al carrito</string>
    <string name="buy_item">Comprar</string>
    <string name="aviso_sistema">¡Aviso del sistema!</string>
    <string name="product_added">El producto ha sido añadido al carrito</string>
    <string name="bolsa_de_compras">Bolsa de Compras</string>
    <string-array name="tipoDoc">
        <item>DNI</item>
        <item>RUC</item>
        <item>CARNET EXT.</item>
        <item>PASAPORTE</item>
    </string-array>
    <string-array name="departamentos">
        <item>Lambayeque</item>
        <item>Piura</item>
        <item>Tumbes</item>
        <item>Lima</item>
    </string-array>
    <string-array name="provincias">
        <item>Chiclayo</item>
        <item>Lambayeque</item>
        <item>Ferreñafe</item>
    </string-array>
    <string-array name="distritos">
        <item>Ferreñafe</item>
        <item>Pueblo Nuevo</item>
        <item>Mesones Muro</item>
        <item>Inkahuasi</item>
        <item>Kañaris</item>
    </string-array>
</resources>