<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_inicio"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mis_compras"
            android:icon="@drawable/ic_my_shop"
            android:title="@string/menu_compras" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_configuracion" />
    </group>
    <item android:title="@string/nav_administracion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_productos"
                    android:title="@string/nav_producto"
                    android:icon="@drawable/paquete"/>
                <item
                    android:id="@+id/nav_categoria"
                    android:title="@string/nav_categoria"
                    android:icon="@drawable/ic_categoria"/>
            </group>
        </menu>
    </item>
</menu>